--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,24 @@
   letter-spacing: 0.06em;
   text-transform: uppercase;
   text-align: center;
-  background: #2f303a;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url('../img/hero-background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 body {
@@ -118,6 +135,7 @@ ul {
 /* Team list */
 .team-list {
   display: flex;
+  padding-bottom: 94px;
 }
 
 .team-list .item:not(:last-child) {
@@ -138,7 +156,6 @@ ul {
 /* Texts */
 .section {
   padding-top: 94px;
-  padding-bottom: 94px;
 }
 .section p {
   margin-top: 0;
@@ -260,6 +277,7 @@ ul {
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
+  padding-bottom: 94px;
 }
 
 .portfolio-list .item {
