--- a/css/styles.css
+++ b/css/styles.css
@@ -274,6 +274,29 @@ ul {
 .feacher-list .item:not(:last-child) {
   margin-right: 30px;
 }
+.feacher-list .item::before {
+  content: '';
+  display: block;
+  height: 120px;
+  margin-bottom: 30px;
+  background: #f5f4fa;
+  border-radius: 4px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+}
+.feacher-list .icon-antena::before {
+  background-image: url(../img/feacher-list/antena.svg);
+}
+.feacher-list .icon-clock::before {
+  background-image: url(../img/feacher-list/clock.svg);
+}
+.feacher-list .icon-diagram::before {
+  background-image: url(../img/feacher-list/diagram.svg);
+}
+.feacher-list .icon-astronaut::before {
+  background-image: url(../img/feacher-list/astronaut.svg);
+}
 /* Portfolio list */
 .portfolio-list {
   display: flex;
