--- a/css/styles.css
+++ b/css/styles.css
@@ -181,38 +181,24 @@ ul {
 .address {
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
+  font-size: 14px;
+  line-height: 1.17;
   display: flex;
+  cursor: pointer;
+  vertical-align: bottom;
+  padding: 0;
+  border: none;
+  margin: 0;
 }
 .address:hover,
 .address:focus {
   color: var(--accent-color);
 }
-/* .address-nav .item {
-  display: inline-flex;
-}
-
-.icon-phone::before {
-  content: '';
-  background-image: url(../img/icons/phone.svg);
+.icon-nav {
   margin-right: 10px;
-  background-size: cover;
-  height: 16px;
-  width: 10px;
-  background-repeat: no-repeat;
-  background-size: contain;
+  fill: currentColor;
+  position: relative;
 }
-.icon-envelope::before {
-  content: '';
-  display: flex;
-  align-items: bottom;
-  background-image: url(../img/icons/envelope.svg);
-  margin-right: 10px;
-  background-size: cover;
-  height: 12px;
-  width: 16px;
-  background-repeat: no-repeat;
-  background-size: contain;
-} */
 
 /*  Main nav */
 .main-nav {
@@ -401,6 +387,32 @@ ul {
 .portfolio-button .item:not(:last-child) {
   margin-right: 8px;
 }
+/* Client logo */
+.client-logo {
+  display: flex;
+  padding-bottom: 94px;
+}
+.client-logo .item {
+  width: 170px;
+  height: 90px;
+  border: 1px solid #afb1b8;
+  box-sizing: border-box;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.client-logo .item:hover {
+  --color1: #2196f3;
+  border: 1px solid #2196f3;
+}
+.client-logo .item:not(:last-child) {
+  margin-right: 30px;
+}
+.logo-icons {
+  display: inline-block;
+  width: 100%;
+  position: relative;
+}
+
 /* footer */
 .footer {
   background-color: #2f303a;
