--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,10 @@ ul {
 .icon-nav {
   margin-right: 10px;
   fill: currentColor;
-  position: relative;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  vertical-align: middle;
 }
 
 /*  Main nav */
@@ -410,7 +413,6 @@ ul {
 .logo-icons {
   display: inline-block;
   width: 100%;
-  position: relative;
 }
 
 /* footer */
