--- a/css/styles.css
+++ b/css/styles.css
@@ -200,7 +200,6 @@ ul {
   display: inline-block;
   width: 16px;
   height: 16px;
-  vertical-align: middle;
 }
 
 /*  Main nav */
@@ -413,6 +412,8 @@ ul {
 .logo-icons {
   display: inline-block;
   width: 100%;
+  height: 100%;
+  padding: 20px;
 }
 
 /* footer */
