--- a/css/styles.css
+++ b/css/styles.css
@@ -349,34 +349,34 @@ ul {
   display: flex;
   padding: 0;
   margin: 0;
+  text-align: center;
+}
+.card-list .item {
+  display: inline-block;
+  width: 44px;
+  height: 44px;
 }
 .item-card {
   border: none;
   padding: 0;
-
-  /* padding: 12px; */
 }
 
-.card-list > .item {
+.item-card {
   width: 44px;
   height: 44px;
 
   padding: 0;
   border: none;
-  border-radius: 50%;
-  background-color: blue;
-}
-.item-card {
 }
 .item-icon {
   width: 20px;
   height: 20px;
-  --color1: red;
 }
-.item-card > .item-icon:hover {
-  /* fill: rgba(33, 150, 243, 1); */
+.item-icon:hover {
+  fill: rgba(33, 150, 243, 1);
   --color1: #ffffff;
   background-color: rgba(33, 150, 243, 1);
+  border-radius: 50%;
 }
 .card-list .item:not(:last-child) {
   margin-right: 10px;
