added icons to footer, without changes styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -421,10 +421,16 @@ ul {
   background-color: #2f303a;
   margin-top: 0;
 
-  display: flex;
-  align-items: baseline;
   padding-top: 60px;
   padding-bottom: 60px;
+}
+/* .footer-container { 
+  display: flex;
+  align-items: baseline;
+} */
+.footer-content {
+  display: flex;
+  align-items: baseline;
   justify-content: space-between;
 }
 .footer .footer-logo {
@@ -447,6 +453,19 @@ ul {
   font-size: 14px;
   line-height: 1.71;
   color: rgba(255, 255, 255, 0.6);
+}
+.footer-social-links {
+}
+.link-header {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: var(--hero-text-color);
+  margin-bottom: 20px;
 }
 /* Container sizes */
 .container {
