--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ ul {
   text-align: center;
 
   margin-top: 0;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
 }
 .primary-list {
   display: flex;
