--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,12 @@ ul {
 .hero-title {
   margin-top: 0;
   margin-bottom: 0;
+  font-style: normal;
+
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
 }
 
 .section-title-primary {
