--- a/css/styles.css
+++ b/css/styles.css
@@ -187,6 +187,7 @@ ul {
 .address {
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
+  font-weight: 500;
   font-size: 14px;
   line-height: 1.17;
   display: flex;
