--- a/css/styles.css
+++ b/css/styles.css
@@ -334,7 +334,8 @@ ul {
 	margin-right: 30px;
 	margin-bottom: 30px;
 }
-.portfolio-list .item:hover {
+.portfolio-list .item:hover,
+.portfolio-list .item:focus {
 	border: 1px solid #eeeeee;
 	box-sizing: border-box;
 	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
@@ -377,7 +378,9 @@ ul {
 	height: 20px;
 }
 .item-card:hover,
-.footer-card:hover {
+.item-card:focus,
+.footer-card:hover,
+.footer-card:focus {
 	fill: rgba(33, 150, 243, 1);
 	--color1: #ffffff;
 	background-color: rgba(33, 150, 243, 1);
